--- a/.github/workflows/test-macos-appstore-free.yml
+++ b/.github/workflows/test-macos-appstore-free.yml
@@ -1,4 +1,4 @@
-name: Test macOS pkg (free appstore)
+name: Test macOS appstore (free)
 
 on:
   workflow_dispatch:
@@ -7,8 +7,8 @@ on:
 permissions: read-all
 
 jobs:
-  pkg-appstore:
-    name: Create pkg
+  appstore:
+    name: Create macos appstore
     runs-on: macos-15
     steps:
       - uses: actions/checkout@v4
