fix: update email

--- a/linux/packaging/deb/make_config-pro.yaml
+++ b/linux/packaging/deb/make_config-pro.yaml
@@ -2,7 +2,7 @@ display_name: PicGuard Pro
 package_name: picguard-pro
 maintainer:
   name: kjxbyz
-  email: hello@kjxbyz.com
+  email: support@picguard.app
 priority: optional
 section: x11
 installed_size: 12000
