--- a/snap/snapcraft-pro.yaml
+++ b/snap/snapcraft-pro.yaml
@@ -11,7 +11,7 @@ description: |
   Download **PicGuard Pro** today and take control of your photo security and personalization like never before!
 icon: snap/gui/picguard-pro.png
 title: PicGuard Pro
-contact: hello@kjxbyz.com
+contact: support@picguard.app
 license: GPL-3.0-only
 source-code: https://github.com/picguard/picguard
 issues: https://github.com/picguard/picguard/issues
