--- a/linux/packaging/rpm/make_config-pro.yaml
+++ b/linux/packaging/rpm/make_config-pro.yaml
@@ -11,7 +11,7 @@ description: |
   Download **PicGuard Pro** today and take control of your photo security and personalization like never before!
 vendor: kjxbyz
 packager: kjxbyz
-packagerEmail: hello@kjxbyz.com
+packagerEmail: support@picguard.app
 license: GPL-3.0-only
 url: https://github.com/picguard/picguard
 build_arch: x86_64
