ci: Using Xcode 16.4 as a bundler

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -497,6 +497,12 @@ jobs:
     needs:
       - create-release
     steps:
+      - name: Select Xcode version
+        run: sudo xcode-select --switch /Applications/Xcode_16.4.app
+
+      - name: print Xcode version
+        run: xcodebuild -version
+
       - uses: actions/checkout@v5
 
       - name: Setup Flutter
@@ -618,6 +624,12 @@ jobs:
     needs:
       - create-release
     steps:
+      - name: Select Xcode version
+        run: sudo xcode-select --switch /Applications/Xcode_16.4.app
+
+      - name: print Xcode version
+        run: xcodebuild -version
+
       - uses: actions/checkout@v5
 
       - name: Setup Flutter
