--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   app_settings: ^6.1.1
   bot_toast: ^4.1.3
   cupertino_icons: ^1.0.8
+  desktop_drop: ^0.6.1
   device_info_plus: ^11.5.0
   file_picker: ^10.3.2
   file_saver: ^0.3.1
