--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get_storage: ^2.1.1
   image_gallery_saver_plus: ^4.0.1
   image_picker: ^1.2.0
+  in_app_purchase: ^3.2.3
   keyboard_dismisser: ^3.0.0
   logging: ^1.3.0
   menu_bar: ^0.5.3
