--- a/.github/workflows/test-android.yml
+++ b/.github/workflows/test-android.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
+        id: flutter-action
         with:
           channel: 'stable'
           flutter-version: ${{ env.flutter-version }}
@@ -37,6 +38,9 @@ jobs:
 
       - name: Install Flutter dependencies
         run: flutter pub get
+
+      - name: Remove build id
+        run: sed -i -e 's/-Wl,/-Wl,--build-id=none,/' ${{ steps.flutter-action.outputs.PUB-CACHE-PATH }}/hosted/pub.dev/jni-*/src/CMakeLists.txt
 
       - name: Configure Keystore for Android
         run: |
