--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,17 +41,17 @@ dependencies:
   fluttertoast: ^8.2.13
   form_builder_validators: ^11.2.0
   gap: ^3.0.1
-  get: ^4.7.2
-  get_storage: ^2.1.1
   image_gallery_saver_plus: ^4.0.1
   image_picker: ^1.2.0
   keyboard_dismisser: ^3.0.0
   logging: ^1.3.0
   menu_bar: ^0.5.3
   multi_image_picker_view: ^3.0.0
+  nb_utils: ^7.1.8
   package_info_plus: ^9.0.0
   permission_handler: ^12.0.1
   photo_view: ^0.15.0
+  provider: ^6.1.5+1
   sentry_flutter: ^9.6.0
   sentry_logging: ^9.6.0
   shared_preferences: ^2.5.3
