--- a/linux/packaging/deb/make_config-pro.yaml
+++ b/linux/packaging/deb/make_config-pro.yaml
@@ -24,7 +24,9 @@ categories:
 
 # direct dependencies required by the application
 # refer: https://www.debian.org/doc/debian-policy/ch-relationships.html
+# https://www.debian.org/distrib/packages#search_packages
 dependencies:
+  - libc6 (>= 2.38)
   - libayatana-appindicator3-1
 
 startup_notify: true
