--- a/.github/workflows/test-windows-store-free.yml
+++ b/.github/workflows/test-windows-store-free.yml
@@ -67,9 +67,7 @@ jobs:
 
       - name: Install yq
         shell: pwsh
-        run: |
-          choco install yq
-          yq --version
+        run: choco install yq --no-progress
 
       - name: Update config
         shell: pwsh
