--- a/.github/workflows/test-windows-msi-free-arm64.yml
+++ b/.github/workflows/test-windows-msi-free-arm64.yml
@@ -53,9 +53,7 @@ jobs:
 
       - name: Install yq
         shell: pwsh
-        run: |
-          choco install yq
-          yq --version
+        run: choco install yq --no-progress
 
       - name: Install wix toolset
         shell: pwsh
