--- a/.github/workflows/test-windows-msi-pro.yml
+++ b/.github/workflows/test-windows-msi-pro.yml
@@ -35,7 +35,7 @@ jobs:
 
   msi:
     name: Create msi
-    runs-on: windows-2022
+    runs-on: windows-2025
     env:
       Platform: x64
       Configuration: Release
@@ -55,9 +55,7 @@ jobs:
 
       - name: Install yq
         shell: pwsh
-        run: |
-          choco install yq
-          yq --version
+        run: choco install yq --no-progress
 
       - name: Install wix toolset
         shell: pwsh
