--- a/linux/packaging/rpm/make_config.yaml
+++ b/linux/packaging/rpm/make_config.yaml
@@ -29,11 +29,13 @@ generic_name: PicGuard
 categories:
   - Utility
 
+build_requires:
+  - glibc >= 2.38
+
 # direct dependencies required by the application
 # https://docs.redhat.com/zh-cn/documentation/red_hat_enterprise_linux/8/html/packaging_and_distributing_software/working-with-spec-files_packaging-software
 # https://packages.fedoraproject.org/
 requires:
-  - glibc >= 2.38
   - libayatana-appindicator3-1
 
 startup_notify: true
