--- a/.github/workflows/test-linux-rpm-pro-arm64.yml
+++ b/.github/workflows/test-linux-rpm-pro-arm64.yml
@@ -32,6 +32,9 @@ jobs:
           # used by tray_manager
           sudo dnf install -y libayatana-appindicator-gtk3
 
+      - name: Install jq
+        run: sudo dnf install -y jq
+
       - name: Setup Flutter
         shell: bash
         run: |
