--- a/.github/workflows/test-linux-rpm-pro.yml
+++ b/.github/workflows/test-linux-rpm-pro.yml
@@ -33,6 +33,9 @@ jobs:
           # used by tray_manager
           sudo dnf install -y libayatana-appindicator-gtk3
 
+      - name: Install jq
+        run: sudo dnf install -y jq
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
